# fjord

./: .gitignore  Cargo.toml
haskell-version/: CHANGELOG.md  fjord.cabal  fjordhs.hs
haskell-version/app/: Main.hs
haskell-version/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: main.rs
